[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uristepper-docker-example"
version = "0.1.0"
description = "Docker demo for stepper:// (device profile, flows, markpact bundle)"
requires-python = ">=3.10"
dependencies = ["uristepper>=0.1.0", "uristepperedge>=0.1.0", "uricontrol>=0.1.8"]

[tool.uv.sources]
uristepper = { path = "../uristepper", editable = true }
uristepperedge = { path = "../uristepperedge", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
